# run-windows-service-without-admin-example

./: Cargo.toml  README.md
src/: main.rs  service.rs
